style.css
*{
    margin: 0px;
}
body {
    background-image: linear-gradient(to right, rgb(103, 103, 252), rgb(193, 190, 249));
}
.main-content {
    display: flex;
}
.left-part {
    width: 70vw;
}
.left-nav{
    display: flex;
    justify-content: space-between;
    width: 100%;
    height: 35px;
    margin-bottom:5px;
}
.left-nav .nav-start {
    display: flex;
    justify-content: center;
    align-items:center;
    font-weight: bold;
    margin-left: 25px;
}
.left-nav .nav-mid {
    display: flex;
    justify-content: space-between;
    align-items: center;
    color: rgb(124, 127, 128);
    width: 20%;
}
.left-nav .nav-mid #locked-stacking {
    text-decoration: underline;
}
.left-nav .nav-end {
    display: flex;
    color: rgb(128, 128, 128);
    align-items: center;
    margin-right: 10px;
}
.left-first-content {
    width: 100%;
    height: 40vh;
    display: flex;
    align-items: center;
    justify-content: space-between;
}
.left-first-content .left-stats{
    width: 25%;
    height: 95%;
    margin-left: 25px ;
    background-color: white;
    border-radius:7px ;
}
.left-first-content .left-stats-part{
    padding-left: 5px;
    height: 25%;
}
.left-stats-part p {
    margin: 0;
    margin-bottom: 5px;
}
.left-first-content .right-stats {
    width: 65%;
    height: 100%;
    align-items:center ;
    justify-content: space-between;
    display: flex;
    flex-wrap: wrap;
}
.left-first-content .right-stats .right-sub-stats{
    width: 47%;
    height: 45%;
    background-color: white;
    border-radius:7px ;
}
.left-second-content-heading {
    margin-top: 10px;
    margin-bottom: 10px;
    font-size: 18px;
    font-weight: bold;
    margin-left: 20px;
}
.left-second-part {
    width: 100%;
    display: flex;
    justify-content: end;
}
.left-second-content {
    width: 98%;
    height: 100px;
    background-color: white;
    border-radius:7px;
    display: flex;
}
.left-second-details {
    width: 25%;
    padding-left: 10px
}

.right-part {
    width: 30vw;
}
.right-nav {
    display: flex;
    justify-content: space-between;
    height: 37px;
    align-items: center;
}
.right-nav-left {
    font-weight: bolder;
    font-size: 18px;
    margin-left: 10px;
}
.right-nav-right {
    font-weight: 500;
    color: rgb(91, 91, 92);
    margin-right: 10px;
}
.right-first-part {
    height: 40vh;
    display: flex;
    align-items: center;
    justify-content: center;
}
.right-first-content {
    height: 94%;
    width: 95%;
    border-radius: 7px;
    background-color:rgb(59, 59, 254);
    display: flex;
    flex-direction: column;
}
.balance {
    display: flex;
    flex-direction: row;
    height: 40%;
}
.balance .detail {
    width: 70%;
}
.balance .picture {
    width: 30%;
}
.balance-history {
    height: 30%;
}
.balance-buttons {
    height: 30%;
    padding-top: 25px;
}
.balance-buttons .wallet {
    padding: 7px 15px 7px 15px;
    background-color: white;
    border: 0;
    border-radius: 5px;
    font-size: 14px;
    margin-left: 15px;
    margin-right: 25px;
}
.balance-buttons .transfer {
    padding: 7px 15px 7px 15px;
    background-color: rgb(59, 59, 254);
    border: 1px solid white;
    border-radius: 5px;
    font-size: 14px;
}
.left-third-content-heading {
    margin-top: 10px;
    margin-bottom: 10px;
    font-size: 18px;
    font-weight: bold;
    margin-left: 20px;
}
.left-third-content {
    height: 280px;
    background-color: white;
    border-radius:7px ;
    display: flex;
}

.left-third-left {
    width: 50%;
    display: flex;
    flex-direction: column;
    align-items: center;
}
.left-third-left-content-area {
    width: 75%;
    height: 80%;
}
.left-third-left-content {
    display: flex;
    justify-content: space-between;
    margin-top: 15px;
}
.left-third-right {
    width: 50%;
}
.left-third-left .ending {
    display: flex;
    justify-content: left;
    margin-top: 15px;
    width: 75%;
    color: rgb(128, 128, 129);
    font-weight: 700;
}
.left-third-left .ending .fa-repeat {
    margin-right: 5px;
    color: rgb(54, 54, 247);
}
.left-third-right-heading {
    background-color: rgb(213, 213, 220);
    height: 30px;
    display: flex;
    align-items: center;
    margin-top: 15px;
    width: 90%;
    border-radius: 3px;
    padding-left: 10px;
    font-weight: 700;
}
.left-third-right-content {
    width: 90%;
    display: flex;
    justify-content: space-between;
    margin-top: 10px;
    color: rgb(128, 128, 129);
}
.left-third-right-buttons {
    width: 90%;
    display: flex;
    justify-content: end;
    margin-top: 25px;
}
.left-third-right-buttons .cancel {
    border: 1px solid rgb(141, 141, 145);
    margin-right: 15px;
    background-color: white;
    color:rgb(141, 141, 145) ;
    padding: 5px 15px 5px 15px;
    border-radius: 4px;
}
.left-third-right-buttons .approve {
    border: 1px solid rgb(141, 141, 145);
    background-color: rgb(33, 87, 249);
    color:white;
    padding: 5px 15px 5px 15px;
    border-radius: 4px;
}

